fix: ui spacing on role edit page

--- a/app/assets/stylesheets/rol.scss
+++ b/app/assets/stylesheets/rol.scss
@@ -14,6 +14,7 @@
 
 .rol-formSection {
   font-size: 0.9em;
+  margin-bottom: 2em;
 
   &:after {
     content:"";
